# projeto_final

./: README.md  compose.yml  dockerfile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
clicksaude/: asgi.py  settings.py  urls.py  wsgi.py
compose/django/: start
consultas/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
consultas/migrations/: 0001_initial.py  0002_alter_consulta_options_and_more.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_usuario_tipo.py  0002_delete_administrador_remove_consulta_medicamentos_and_more.py  0003_especialidade_alter_medico_especialidade.py  0004_alter_atendente_options.py  0005_remove_consulta_medico_remove_consulta_paciente_and_more.py  0006_usuario_foto.py
core/templates/: base.html  home.html  index.html
templates/: base.html  base_dashboard.html  cadastro.html  confirmar_exclusao.html  home.html  index.html  login.html
templates/templates_consulta/: confirmar_exclusao.html  detalhes_consulta.html  editar_consulta.html  excecao_horario_form.html  form_aviso.html  form_consulta.html  gerenciar_agenda.html  listar_avisos.html  listar_consultas.html  minhas_consultas.html  minhas_consultas_paciente.html  slots_only.html
templates/templates_usuarios/: detalhes_usuario.html  editar_usuario.html  form_atendente.html  form_medico.html  form_paciente.html  listar_atendentes.html  listar_medicos.html  listar_pacientes.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  (+5 more)
(+5 files in other folders)
